Mon Mar 31 12:29:32 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Makefile (DIRS): Updated  to include the new test.
	
	* tests/Collocation_Tests/Makefile.bor:
	* tests/Collocation_Tests/Collocated_Test.bor: Borland files.
	
Mon Mar 31 12:20:31 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tests/Collocation_Tests/Client_Task.cpp:
	* tests/Collocation_Tests/Client_Task.h:
	* tests/Collocation_Tests/Collocated_Test.cpp:
	* tests/Collocation_Tests/Hello.cpp:
	* tests/Collocation_Tests/Hello.h:
	* tests/Collocation_Tests/Makefile:
	* tests/Collocation_Tests/Server_Task.cpp:
	* tests/Collocation_Tests/Server_Task.h:
	* tests/Collocation_Tests/run_test.pl: Restructured the test to
	  work under different values of -ORBCollocation and multiple
	  ORB's. Thanks to Priyanka for helping me to trace the problem
	  with the first version of this test. 

	* tao/ORB_Core.cpp: Cosmetic fixes.


Mon Mar 31 12:03:51 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/IOP_IORC.{h,cpp,i}: Regenerated the files
	* tao/diffs/IOP_IOR.diff:
	* tao/diffs/IOP_Codec.diff: Added the diffs for future use. 

Mon Mar 31 11:52:26 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/IOP_Codec.pidl: Fixed some comments
	* tao/IOP_CodecC.{h,cpp,i}: Regenerated the files since the one
	  merged form the branch was apparently created from the IDL
	  compiler when its internal state was busted.

Mon Mar 31 10:01:13 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * orbsvcs/orbsvcs/IFRService/IFR_Service_Utils_T.cpp (set_is_multiple):

          Added ACE_UNUSED_ARG macros for the arguments, which are not used
          except in a specialization. BCB gives a warning if the arg names in
          the unspecialized version are just left out.

Mon Mar 31 14:18:23 2003  Simon McQueen  <sm@prismtechnologies.com>

	* orbsvcs/tests/Bug_1393_Regression/Bug_1393_Regression.mpc: